<resources>
    <string name="app_name">auxiliary-health-app</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Salud</string>
    <string name="title_menu">Menu</string>
    <string name="title_dashboard">Dispositivos</string>
    <string name="title_notifications">Perfil</string>
    <string name="pcardiaco">Pulso cardiaco</string>
    <string name="osangre">Oxigeno en la sangre</string>
    <string name="rrespiratorio">Ritmo respiratorio</string>
    <string name="tcorporal">Temperatura corporal</string>
    <string name="rate_heart">Prom pulso cardiaco</string>
    <string name="state_bt_device">Sin conexion al dispositivo</string>
    <string name="password_text">Contraseña</string>
    <string name="user_text">Usuario</string>
    <string name="login_text">Acceder</string>
    <string name="sign_up_text">Registrate</string>
    <string name="login_google_text">Acceder con Google</string>
    <string name="name_sign_up">Nombre</string>
    <string name="address_sign_up">Dirección</string>
    <string name="phone_sign_up">Telefono</string>
    <string name="email_sign_up">Email</string>
    <string name="sign_up_info">Registro de inicio de sesión:</string>
    <string name="info_title_sign_up">Datos personales de registro:</string>
    <string name="password_sign_up">Contraseña</string>
    <string name="register_btn_sign_up">Registrar</string>
    <string name="heartbeat_info">Pulso cardiaco</string>
    <string name="data_info_title">Captura de datos</string>
    <string name="take_data_bt">Capturar datos</string>
    <string name="birthdate_input">Fecha nacimiento</string>
    <string name="age_input">Edad</string>
    <string name="identify_input">Identificación</string>
    <string name="user_info_register">Registro de usuarios</string>
    <string name="empty_user">Sin usuarios disponibles</string>
    <string name="rate_respiratory_text">Ritmo respiratorio</string>
    <string name="body_temp_text">Temperatura corporal</string>
    <string name="store_text">Guardar datos</string>
    <string name="blood_oxygen_text">Oxigeno en la sangre</string>
    <string name="exit_app_text">Salir</string>
</resources>
